update controllers-users and swagger, add readme
