# swagger.json
@@ -42,7 +42,6 @@
         "summary": "Register a new user",
         "tags": ["Auth"],
         "description": "Register a new user in the system",
-        "security": [{ "Bearer": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -109,6 +108,7 @@
         "summary": "User logout",
         "tags": ["Auth"],
         "description": "Log a user out of the system",
+        "security": [{ "Bearer": [] }],
         "responses": {
           "200": {
             "description": "Successful logout"
@@ -124,6 +124,7 @@
         "summary": "Get the current user",
         "tags": ["User"],
         "description": "Retrieve data about the currently authorized user",
+        "security": [{ "Bearer": [] }],
         "responses": {
           "200": {
             "description": "Successful request",
@@ -146,6 +147,7 @@
         "summary": "Get user parameters",
         "tags": ["User"],
         "description": "Endpoint to get user parameters",
+        "security": [{ "Bearer": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -169,6 +171,7 @@
         "summary": "Add user parameters",
         "tags": ["User"],
         "description": "Endpoint to add user parameters",
+        "security": [{ "Bearer": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -195,6 +198,7 @@
         "summary": "Update user parameters",
         "tags": ["User"],
         "description": "Endpoint to update user parameters",
+        "security": [{ "Bearer": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -220,6 +224,7 @@
         "summary": "Update user's name",
         "tags": ["User"],
         "description": "Update user's name",
+        "security": [{ "Bearer": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -245,6 +250,7 @@
         "summary": "Update user's avatar",
         "tags": ["User"],
         "description": "Update user's avatar",
+        "security": [{ "Bearer": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -942,6 +948,42 @@
               }
           }
       },
+      "User": {
+        "type": "object",
+        "required": ["name", "email", "password"],
+        "properties": {
+            "name": { "type": "string", "example":"Bob Tirel" },
+            "email": { "type": "string", "format": "email", "example":"bobtirel@gmail.com" },
+            "avatarURL": { "type": "string", "example":"//www.gravatar.com/avatar/681cc53f6ba12f990cc1ae04f63ee53c" },
+            "userParams": { "type": "object", "example":{
+            "height": 190,
+            "currentWeight": 82,
+            "desiredWeight": 74,
+            "birthday": "1988-05-07T00:00:00.000+00:00",
+            "blood": 2,
+            "sex": "male",
+            "levelActivity": 5} },
+            "createdAt": { "type": "date",  "example": "2023-09-19T19:55:19.539+00:00" }
+        }
+      },
+      "UserParams": {
+        "type": "object", "example":{
+            "height": 190,
+            "currentWeight": 82,
+            "desiredWeight": 74,
+            "birthday": "1988-05-07T00:00:00.000+00:00",
+            "blood": 2,
+            "sex": "male",
+            "levelActivity": 5} },
+      "UpdateUsername": {
+        "type": "object",
+        "required": ["name"],
+        "properties": {
+          "name": {
+            "type": "string", "example":"Joi Kiwi"
+          }
+        }
+      },
       "Exercise": {
         "type": "object",
         "properties": {
@@ -1096,65 +1138,6 @@
               "vegetables and herbs"
             ],
             "description": "List of product categories"
-          }
-        }
-      },
-      "User": {
-        "type": "object",
-        "required": ["name", "email", "password"],
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          },
-          "token": {
-            "type": "string"
-          },
-          "avatarURL": {
-            "type": "string"
-          },
-          "userParams": {
-            "type": "object"
-          }
-        }
-      },
-      "UserParams": {
-        "type": "object",
-        "properties": {
-          "height": {
-            "type": "number"
-          },
-          "currentWeight": {
-            "type": "number"
-          },
-          "desiredWeight": {
-            "type": "number"
-          },
-          "birthday": {
-            "type": "string"
-          },
-          "blood": {
-            "type": "number"
-          },
-          "sex": {
-            "type": "string"
-          },
-          "levelActivity": {
-            "type": "number"
-          }
-        }
-      },
-      "UpdateUsername": {
-        "type": "object",
-        "required": ["name"],
-        "properties": {
-          "name": {
-            "type": "string"
           }
         }
       },
